# valgrindrr

./: .gitignore  Makefile.all.am  Makefile.am  configure.ac  pub_core_recordreplay.h  readme.rst
VEX/priv/: main_main.c
VEX/pub/: libvex.h
coregrind/: Makefile.am  launcher-linux.c  m_commandline.c  m_libcbase.c  m_main.c  m_redir.c  m_translate.c  pub_core_basics.h  pub_core_threadstate.h
coregrind/m_aspacemgr/: aspacemgr-linux.c
coregrind/m_initimg/: initimg-linux.c
coregrind/m_recordreplay/: instrument.c  priv_recordreplay.h  record.c  recordreplay.c  replay.c
coregrind/m_scheduler/: scheduler.c
coregrind/m_syswrap/: priv_types_n_macros.h  syswrap-generic.c  syswrap-linux.c  syswrap-main.c  syswrap-x86-linux.c  syswrapRR-generic.c  syswrapRR-linux.c  syswrapRR-x86-linux.c
include/: pub_tool_basics.h
rr_testcode/: file_IO.c  localtime_test.c  makefile  std_input.c
rrcheck/: Makefile.am  rrcheck_main.c
